# fexcel

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  test.json
.github/workflows/: publish.yaml  test.yaml
src/fake_excel/: __main__.py  constraint.py  field.py  fields.py  generator.py  main.py
src/fake_excel/fields/: __init__.py  base.py  boolean.py  choice.py  network.py  numeric.py  temporal.py  text.py
src/fexcel/: __init__.py  __main__.py  generator.py
src/fexcel/fields/: base.py  boolean.py  choice.py  network.py  numeric.py  temporal.py  text.py
tests/: test_argument_parser.py  test_excel_field.py  test_excel_field_test_table.py  test_execel_faker.py  test_fexcel.py
tests/data/schemas/: mock-values.json  test.json
tests/fexcel_fields/: test_constraints.py
tests/fields/: test_constraints.py  test_dunder_methods.py  test_factory.py  test_factory_test_table.py  test_registry.py
