[project]
name = "fexcel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Manel Caireta", email = "m.caireta@altostratus.es" }]
requires-python = ">=3.11"
dependencies = [
    "faker>=36.2.2",
    "pydantic>=2.10.6",
    "pyexcel>=0.7.1",
    "pyexcel-xlsx>=0.6.1",
]

[project.scripts]
fexcel = "fexcel.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:", "def main", "@abstractmethod"]